--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,281 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:scrollbars="vertical"
+    android:visibility="visible"
     tools:context="qc.main.MainActivity"
+    tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
-
-    <CheckBox
-        android:id="@+id/disableNotifsCheckbox"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/rootLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/disableNotifs"
-        app:layout_constraintVertical_bias="0.0" />
+        android:orientation="vertical"
+        android:weightSum="1">
 
-    <TextView
-        android:id="@+id/disableNotifs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/disable_notifs_header"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="24dp"
-        android:gravity="start"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        <TextView
+            android:id="@+id/disableNotifs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:gravity="start"
+            android:text="@string/disable_notifs_header"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/disableNotifsDescription"
-        android:layout_width="307dp"
-        android:layout_height="wrap_content"
-        android:gravity="start"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/disable_notifs_description"
-        android:textSize="12sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/disableNotifs" />
+        <Switch
+            android:id="@+id/notifSwitch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="4dp"
+            android:checked="true"
+            android:enabled="true"
+            android:isScrollContainer="false"
+            android:splitTrack="false"
+            android:switchPadding="10dp"
+            android:switchTextAppearance="@android:style/TextAppearance.Material.Caption"
+            android:text="@string/disable_notifs_description"
+            android:textAppearance="@android:style/TextAppearance.Material.Caption"
+            android:textColor="?android:attr/textColorHint"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/disableNotifs" />
 
-    <TextView
-        android:id="@+id/changeNotifs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:gravity="start"
-        android:text="@string/change_notifs_header"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/disableNotifsDescription" />
+        <TextView
+            android:id="@+id/changeNotifs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:gravity="start"
+            android:text="@string/change_notifs_header"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notifSwitch" />
 
-    <TextView
-        android:id="@+id/changeNotifsDescription"
-        android:layout_width="363dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/change_notifs_description"
-        android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@+id/changeNotifs"
-        android:layout_marginStart="24dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        <TextView
+            android:id="@+id/changeNotifsDescription"
+            android:layout_width="363dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/change_notifs_description"
+            android:textAppearance="@android:style/TextAppearance.Material.Caption"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/changeNotifs" />
 
-    <Spinner
-        android:id="@+id/notif_timeout_spinner"
-        android:layout_width="363dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:spinnerMode="dropdown"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changeNotifsDescription" />
-</android.support.constraint.ConstraintLayout>
+        <Switch
+            android:id="@+id/timeoutDisabled"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/timeout_enabled"
+            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/changeNotifsDescription" />
+
+        <Spinner
+            android:id="@+id/notifTimeout"
+            android:layout_width="363dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:spinnerMode="dropdown"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/timeoutDisabled" />
+
+        <TextView
+            android:id="@+id/selectAction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/select_actions_header"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notifTimeout" />
+
+        <TextView
+            android:id="@+id/selectActionsDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/select_actions_description"
+            android:textAppearance="@android:style/TextAppearance.Material.Caption"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/selectAction" />
+
+        <Switch
+            android:id="@+id/actionLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="16dp"
+            android:checked="true"
+            android:text="@string/action_update_label"
+            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
+            android:textColor="@android:color/black"
+            app:layout_constraintHorizontal_bias="0.666"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/selectActionsDescription" />
+
+        <Switch
+            android:id="@+id/actionReset"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="8dp"
+            android:checked="true"
+            android:text="@string/action_reset_all"
+            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
+            android:textColor="@android:color/black"
+            app:layout_constraintHorizontal_bias="0.666"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/actionLabel" />
+
+        <Switch
+            android:id="@+id/actionCounter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="8dp"
+            android:checked="true"
+            android:splitTrack="false"
+            android:text="@string/action_reset_counter"
+            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
+            android:textColor="@android:color/black"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/actionReset" />
+
+        <Switch
+            android:id="@+id/dismissOnAction"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="8dp"
+            android:checked="true"
+            android:text="@string/dismiss_on_action"
+            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
+            android:textColor="@android:color/black"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/actionCounter" />
+
+        <TextView
+            android:id="@+id/changeLabelHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/change_label"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dismissOnAction" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            android:descendantFocusability="beforeDescendants"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/dummy"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="0"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:orientation="horizontal"/>
+
+            <EditText
+                android:id="@+id/labelField"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="@string/enter_label"
+                android:nextFocusDown="@+id/dummy"
+                android:nextFocusForward="@+id/dummy"
+                android:nextFocusLeft="@+id/dummy"
+                android:nextFocusRight="@+id/dummy"
+                android:nextFocusUp="@+id/dummy"
+                android:selectAllOnFocus="true"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/applyBtn"
+                app:layout_constraintTop_toBottomOf="@+id/changeLabelHeader" />
+
+            <Button
+                android:id="@+id/applyBtn"
+                style="@android:style/Widget.Material.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="8dp"
+                android:contextClickable="true"
+                android:elevation="0dp"
+                android:minHeight="36dp"
+                android:paddingEnd="8dp"
+                android:paddingStart="8dp"
+                android:text="@string/apply"
+                app:layout_constraintBottom_toBottomOf="@+id/labelField"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/labelField"
+                app:layout_constraintVertical_bias="0.0" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/resetBtn"
+            style="@android:style/Widget.Material.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_weight="0.33"
+            android:backgroundTint="#ff5252"
+            android:elevation="2dp"
+            android:stateListAnimator="@null"
+            android:text="@string/reset_count"
+            android:textAppearance="@android:style/TextAppearance.Material.Button"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@+id/labelField" />
+
+    </LinearLayout>
+
+</ScrollView>
